--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 	<head>
 		<meta AddType application/x-httpd-php .htm>
 		<meta charset="utf-8">
+		<meta name="author" content="Tiegelmann Balázs">
+		<meta name="desription" content="A Gorilla Edzöterem Weboldala">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
         <meta name="viewport" center="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/typo.css">
 		<link rel="stylesheet" href="css/grid.css">
+		<link rel="icon" type="image/x-icon" href="img/favicon.png"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Racing+Sans+One&family=Raleway:wght@700&family=Yantramanav:wght@400;700&display=swap" rel="stylesheet">
-		<title>Goreilla Fitness</title>
+		<title>Gorilla Fitness</title>
 	</head>
 	<body>
 		<section id="top">
